# python-gcloud-build

./: LICENSE  README.md  mypy.ini  pyproject.toml
.github/workflows/: lint.yml  test.yml
hack/: format
tests/: test_gcloud_build.py
