[tool.poetry]
name = "gcloud-build"
version = "0.1.0"
description = "Python client for Google Cloud Build (gcloud build submit)"
authors = ["Shinichi TAMURA <hello@tmshn.dev>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/tmshn/python-gcloud-build"
repository = "https://github.com/tmshn/python-gcloud-build"

[tool.poetry.dependencies]
python = "^3.5"

[tool.poetry.dev-dependencies]
pytest = "^5.3"
ipython = "^7.9.0"
mypy = "^0.770"
autoflake = "^1.3.1"
isort = {version = "^4.3.21", extras = ["pyproject"]}
# black = "^19.10b0"

[tool.black]
line-length = 120
target-version = ['py35']

[tool.isort]
line_length=120
multi_line_output = 3
include_trailing_comma = true

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
